--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
+     <link rel="stylesheet" href="index.css">
 <title>Page Title</title>
 </head>
 <body>
@@ -10,3 +11,4 @@
 
 </body>
 </html> 
+
